# calculator

./: Cargo.toml
src/: evaluator.rs  lib.rs  main.rs  parser.pest  parser.rs
static/: index.html
