[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
pest = "2.7.2"
pest_derive = "2.7.2"
rocket = "0.4.11"
rocket_contrib = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
